Did: corrected chrome alignments bugs; Issue: Alignments are off; Continue Issue: Needs to work on safari browser alignments

--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -28,6 +28,7 @@
 .article_wrapper {
   display: block;
   margin: 25px;
+  width: 95%;
 }
 
 .article_part {
