--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -14,6 +14,10 @@
       font-size: 50px;
       color: $faColor;
     }
+
+    i {
+      border: none;
+    }
   }
 
   .footer_logo {
