--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -2,8 +2,8 @@
 @media screen and (min-width: 200px){
   //header w/ menu and nav
   .header {
-    display: flex;
-    flex-direction: column;
+    @include flex;
+    @include flex-direction(column);
     align-items: left;
     background-color: $mainBG;
     margin: 17px 30px 17px 23px;
