--- a/src/style/_home.scss
+++ b/src/style/_home.scss
@@ -3,7 +3,7 @@
   margin: 0px 118px 30px 116px;
   
   .section {
-    justify-content: space-between;
+    // justify-content: space-between;
   }
 }
 .sub_main{
@@ -12,6 +12,4 @@
   // background-size: cover;
   // box-shadow: 5px 5px 5px #ccc;
   margin: 5px;
-  // opacity: 0.95;
-  // width: 50%;
 }
