--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,5 +1,6 @@
 .container {
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+  @include flex;
+  @include flex-direction(column);
+  // width: 100%;
 }
