--- a/src/style/_mobile.scss
+++ b/src/style/_mobile.scss
@@ -16,8 +16,8 @@
   }
 
   .section {
-    display: flex;
-    flex-direction: column;
+    @include flex;
+    @include flex-direction(column);
     margin: 0px 5% 20px 5%;
   }
 
@@ -40,7 +40,7 @@
   }
 
   .volunteer .application  {
-    flex-direction: column;
+    @include flex-direction(column);
 
     p {
       padding-bottom: 15px;
@@ -87,6 +87,14 @@
     width: 95%;
     max-width: 95%;
     text-align: left;
+  }
+
+  .main_sub {
+    width: 95%;
+
+    .sub_main {
+      width: 45%;
+    }
   }
 
   .nav > ul {
