--- a/src/style/_variable.scss
+++ b/src/style/_variable.scss
@@ -62,6 +62,26 @@ $subsectColor: #fff;
   text-transform: uppercase;
 }
 
+@mixin flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+}
+
+@mixin flex-direction($direction){
+  -ms-flex-direction: $direction;
+  -webkit-flex-direction: $direction;
+  flex-direction: $direction;
+}
+
+@mixin justify-content($jcontent){
+  -webkit-justify-content: $jcontent;
+  justify-content: $jcontent;
+}
+
 i {
   border: solid $fontColor;
   border-width: 0 1px 1px  0;
