--- a/src/style/_volunteers.scss
+++ b/src/style/_volunteers.scss
@@ -26,7 +26,7 @@
 
   
   .application {
-    display: flex;
+    @include flex;
     width: 100%;
 
     p {
